[package]
name = "liquid-filter-commafy"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Filter for the liquid template engine to commafy a number (put comma after every 3 digtist from right to left)."
keywords = ["template", "templating", "liquid"]
categories = ["template-engine"]
readme = "README.md"
repository = "https://github.com/szabgab/liquid-filter-commafy.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = "0.26"
liquid-core = "0.26"
